--- a/index.html
+++ b/index.html
@@ -1,31 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>Exceptional Realty Group - Luxury Homes - About</title>
-  </head>
-  <body>
-  <header>
-    <h1>Exceptional</h1>
-    <h2>Realty Group</h2>
+<head>
+  <title> Exceptional Realty Group - Luxury Homes - About</title>
+  <meta charset ="utf-8">
 
-    <!-- links -->
-    <nav>
-      <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
-    </nav>
+</head>
+<body>
+<header>
+  <h1> Exceptional </h1>
+  <h2> Realty Group </h2>
 </header>
-<section>
-    <img src="images/intro-pic.jpg" alt="A beautiful living room." title="Welcome to Exceptional Realty Group">
+<!-- links -->
+<nav>
+<a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a>
+<a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a><a href="http://hud.gov" target="_blank">Housing and Urban Development Link</a>
 
-    <!--
-    foldername/ = go inside the folder.
-    filename = use a file in the current folder.
-    ../ = leavethe current folder and go up to parent folder.
-    -->
+</nav>
+<!--
+   foldername/ = go inside the foldername
+   filename = use a file in the current directory
+   ../ = leave current folder and go to parent directory
+-->
+<section id="featured-property">
+  <figure>
+    <img src="images/Jonathan_Grover.jpg" alt="A beautiful living room" title="Welcome to exceptional realty">
+    <figcaption>345 Carl Street Apt 12, Carrol Rd. Brooklyn, NY -- Photo by Denise Richards</figcaption>
+  </figure>
+<p>Lorem ipsum dolor sit amet, <br> consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
-    <p>Lorem ipsum dolor sit amet,<br> consectetur adipisicing elit. Quae, perferendis nisi nihil debitis aspernatur doloribus quam eveniet quibusdam tempora esse! Repudiandae, assumenda, debitis doloribus ea eius ab at quae totam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, inventore aliquid ipsam debitis nulla vitae omnis nemo quisquam? Obcaecati dolor ipsum distinctio reprehenderit aliquid autem ea vel provident voluptas nisi.</p>
-
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa, natus, nobis, tempore recusandae culpa deleniti dignissimos laborum perspiciatis exercitationem obcaecati dolores unde eveniet eius debitis perferendis provident porro. Ipsum, placeat.</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 </section>
-  </body>
+<section id="promotional">
+<!-- Promo Video -->
+<figure>
+<video controls>
+  <source src="videos/real-estate.mp4" type="video/mp4">
+  <source src="videos/real-estate.ogv" type="video/ogg">
+    Your browser does not support HTML5 video. <a target="_blank" href="http://browsehappy.com">Please upgrade your browser.</a>
+</video>
+<figcaption>Exceptional Realy Group Promotional Video - Source: Archive.org</figcaption>
+</figure>
+</section>
+<footer>
+  &copy: 2018 Exceptional Realty All Rights Reserved.
+</footer>
+</body>
 </html>
