automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 </figure>
 </section>
 <footer>
-  &copy: 2018 Exceptional Realty All Rights Reserved.
+  &copy; 2018 Exceptional Realty All Rights Reserved.
 </footer>
 </body>
 </html>
